# track-anything-annotate-web

./: .dockerignore  .env.example  Dockerfile  Dockerfile.preview  Dockerfile.tracker  Dockerfile.tracker.gpu  Plan.md  README.md  docker-compose.prod.yml  docker-compose.tracker-cpu.yml  docker-compose.tracker-gpu.yml  docker-compose.tracker.yml  docker-compose.yml  tracker-k8s-gpu.yaml
.github/workflows/: deploy.yml
frontend/: .env  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: UploadZone.tsx
frontend/src/components/annotation/: Annotator.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/lib/: apiClient.ts  apiConfig.ts  apiTypes.ts  filePersistence.ts  utils.ts  wsClient.ts
frontend/src/pages/: Dashboard.tsx  PhotoAnnotation.tsx  VideoAnnotation.tsx
frontend/src/services/: annotationService.ts  previewService.ts  trackingService.ts
frontend/src/store/: annotationStore.ts  imageAnnotationStore.ts
gateway/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile
gateway/networking/: Cargo.toml
gateway/networking/src/: error.rs  lib.rs  main.rs  response.rs  settings.rs  state.rs
gateway/networking/src/api/: mod.rs  schemas.rs  v1.rs
gateway/networking/src/api/handlers/: mod.rs  preview.rs  tracker.rs
gateway/networking/src/services/: mod.rs  rebbitmq.rs  redis.rs
gateway/storage-core/: Cargo.toml
gateway/storage-core/src/: lib.rs
gateway/yandex_disk/: Cargo.toml
gateway/yandex_disk/src/: lib.rs
ml_core/: pyproject.toml
ml_core/checkpoints/: XMem.pth
ml_core/src/ml_core/: __init__.py  config.py
ml_core/src/ml_core/Segmenter/: sam_controller.py  segmenter.py
ml_core/src/ml_core/Tracker/: xmem2_tracker.py
ml_core/src/ml_core/Tracker/XMem2/inference/: inference_core.py  memory_manager.py  run_experiments.py  run_on_video.py
ml_core/src/ml_core/Tracker/XMem2/inference/data/: mask_mapper.py  test_datasets.py  video_reader.py
ml_core/src/ml_core/Tracker/XMem2/inference/frame_selection/: frame_selection.py  frame_selection_utils.py
ml_core/src/ml_core/Tracker/XMem2/inference/interact/: fbrs_controller.py  gui.py  gui_utils.py  interactive_utils.py  resource_manager.py
ml_core/src/ml_core/Tracker/XMem2/inference/interact/fbrs/inference/: utils.py
ml_core/src/ml_core/Tracker/XMem2/inference/interact/fbrs/utils/: misc.py
ml_core/src/ml_core/Tracker/XMem2/inference/interact/fbrs/utils/cython/: dist_maps.py
ml_core/src/ml_core/Tracker/XMem2/inference/interact/s2m/: utils.py
ml_core/src/ml_core/Tracker/XMem2/model/: memory_util.py  modules.py  network.py  resnet.py
ml_core/src/ml_core/Tracker/XMem2/util/: image_saver.py
ml_core/src/ml_core/tools/: STRUCTURE_DATASETS.md  annotations_prompts_types.py  checkframes.py  contour_detector.py  converter.py  mask_display.py  overlay_image.py  utils.py
ml_core/tests/: conftest.py  test_sam.py
workers/preview/: .gitignore  README.md  pyproject.toml
workers/preview/src/: main.py  state.py  utils.py
workers/tracker/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
workers/tracker/src/: annotate_json.py  config.py  main.py  schemas.py  tracker.py  video_processor.py
workers/tracker/src/dataset_export/: base_saver.py  coco.py  config.py  factory.py  helpers.py  pipeline.py  utils.py  voc.py  yolo.py
workers/tracker/src/services/: redis.py  storage.py
