[project]
name = "ml-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lniki", email = "nik_ivanov_33@mail.ru" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "progressbar2>=4.5.0",
    "psutil>=7.2.2",
    "sam-2",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 120
exclude = ["XMem2"]

[project.optional-dependencies]
cpu = [
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]
gpu = [
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-gpu", extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-gpu", extra = "gpu" },
]

sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
