[package]
name = "yandex_disk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
serde = { workspace = true }
storage-core = { path = "../storage-core" }
url = "2.5.8"
