[project]
name = "preview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "ml-core[cpu]",
    "opencv-python>=4.13.0.92",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "torch",
    "torchvision",
]

[tool.uv.sources]
ml-core = { path = "../../ml_core", editable = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true