[project]
name = "preview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "ml-core[cpu]",
    "opencv-python-headless>=4.13.0.92",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "torch",
    "torchvision",
]

[dependency-groups]
dev = [
    "opencv-python>=4.13.0.92",
]

[tool.ruff]
# Ruff config: https://docs.astral.sh/ruff/settings
preview = true
fix = true
target-version = "py313"
line-length = 80

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.uv.sources]
ml-core = { path = "../../ml_core", editable = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
